--- a/Vision.html
+++ b/Vision.html
@@ -31,7 +31,7 @@
                     </div>
                     <div>
                         <h3>Fashion</h3>
-                        <p style="color:darkgray;">Yeezy is more than a brand; it's a silhouette. Earth tones, oversized fits, and boundary-pushing footwear.</p>
+                        <p style="color:darkgray;">Yeezy is more than a brand, it's a fashion piece. Unique pieces, oversized fits, and boundary-pushing footwear.</p>
                     </div>
                     <div>
                         <h3>Culture</h3>
