--- a/YZY.html
+++ b/YZY.html
@@ -21,7 +21,7 @@
 
     <main>
         <section id="merch">
-            <h2 style="font-size: 3rem; text-align: center; text-transform: uppercase; margin-bottom: 2rem; font-weight: 900;">YZY SPLY</h2>
+            <h2 style="font-size: 3rem; text-align: center; text-transform: uppercase; margin-bottom: 2rem; font-weight: 900;">YEEZY</h2>
             <div class="merch-grid">
                 <!-- Item 1 -->
                 <div class="merch-item">
