--- a/YZY.html
+++ b/YZY.html
@@ -25,18 +25,19 @@
             <div class="merch-grid">
                 <!-- Item 1 -->
                 <div class="merch-item">
-                    <div class="merch-image" style="background: black; color: white;">
-                        <span>YZY PODS MOCKUP</span>
+                    <div class="merch-image" style="background: white; border:1px solid #e5e5e5">
+                        <img src="images/YZY/YeezySlides.jpg" alt="YZY Slides">
                     </div>
                     <div class="merch-info">
-                        <span>YZY PODS</span>
+                        <span>YZY SLIDES</span>
                         <span>$20</span>
                     </div>
                 </div>
+
                 <!-- Item 2 -->
                 <div class="merch-item">
                     <div class="merch-image" style="background: white; border:1px solid #e5e5e5">
-                        <span>WET TANK MOCKUP</span>
+                        <img src="images/YZY/WetTank.jpg" alt="WetTank">
                     </div>
                     <div class="merch-info">
                         <span>WET TANK</span>
@@ -45,8 +46,8 @@
                 </div>
                 <!-- Item 3 -->
                 <div class="merch-item">
-                    <div class="merch-image" style="background: #292524; color: white;">
-                        <span>LONG T MOCKUP</span>
+                    <div class="merch-image" style="background: white; color: white;">
+                        <img src="images/YZY/LongTeeShirt.jpg" alt="LongTeeShirt">
                     </div>
                     <div class="merch-info">
                         <span>VULTURES LONG T</span>
