--- a/Vision.html
+++ b/Vision.html
@@ -41,5 +41,23 @@
             </div>
         </section>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js" defer></script>
+
+
+<footer>
+  <div class="rounded-social-buttons">
+    <a class="social-button twitter" href="https://x.com/kanyewest" target="_blank">
+      <i class="fa-brands fa-x-twitter"></i>
+    </a>
+
+    <a class="social-button youtube" href="https://www.youtube.com/@kanyewest" target="_blank">
+      <i class="fa-brands fa-youtube"></i>
+    </a>
+
+    <a class="social-button instagram" href="https://www.instagram.com/ye/?hl=en" target="_blank">
+      <i class="fa-brands fa-instagram"></i>
+    </a>
+  </div>
+</footer>
 </body>
 </html>
